FreeST/test/Programs/ValidTests/Functional/recFun/recFun.fst
f : rec a. (Int -> a)
f x = f x

main : Int
main = 5
